--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     "require": {
         "php": ">=5.3.2",
         "silverstripe/cms": "3.2.*",
-    	"silverstripe/framework": "3.2.*",
+    	"silverstripe/framework": "3.2.*"
     },
 	"extra": {
         "installer-name": "bolttools"
