Minor bug fixes and enhancements from SIS project

--- a/_config/betterbuttons.yml
+++ b/_config/betterbuttons.yml
@@ -11,7 +11,7 @@ BetterButtonsActions:
   create:
     BetterButton_Save: true
     BetterButton_SaveAndClose: true
-    BetterButton_SaveAndAdd: true
+    BetterButton_SaveAndAdd: false
 
   edit:
     BetterButton_Save: true
