Changed required version of better buttons as we are sticking with SS 3.x until 4.x is stable

--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
     	"silverstripe/framework": ">=3.2",
 		"silverstripe-australia/gridfieldextensions": "dev-master",
     	"silverstripe/googlesitemaps": "dev-master",
-    	"unclecheese/betterbuttons": "dev-master",
+    	"unclecheese/betterbuttons": "1.2.*",
     	"jonom/focuspoint": "dev-master",
     	"sheadawson/silverstripe-linkable": "dev-master",
     	"bummzack/sortablefile" : "dev-master",
