--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
         "php": ">=5.3.2",
         "silverstripe/cms": ">=3.2",
     	"silverstripe/framework": ">=3.2",
-		"silverstripe-australia/gridfieldextensions": "dev-master",
+		"silverstripe-australia/gridfieldextensions": "1.4.x-dev",
     	"wilr/silverstripe-googlesitemaps": "1.6.*",
     	"unclecheese/betterbuttons": "1.2.*",
     	"jonom/focuspoint": "dev-master",
