--- a/composer.json
+++ b/composer.json
@@ -10,18 +10,18 @@
         }
     ],
     "require": {
-        "php": ">=5.3.2",
-        "silverstripe/cms": ">=3.2",
-    	"silverstripe/framework": ">=3.2",
+        "php": ">=5.5",
+        "silverstripe/cms": "^3.3",
+    	"silverstripe/framework": "^3.3",
 		"silverstripe-australia/gridfieldextensions": "1.4.*",
     	"wilr/silverstripe-googlesitemaps": "1.6.*",
     	"unclecheese/betterbuttons": "1.2.*",
-    	"jonom/focuspoint": "dev-master",
-    	"sheadawson/silverstripe-linkable": "dev-master",
-    	"bummzack/sortablefile" : "dev-master",
+    	"jonom/focuspoint": "2.4.*",
+    	"sheadawson/silverstripe-linkable": "1.3.*",
+    	"bummzack/sortablefile" : "1.2.*",
 		"christopherbolt/silverstripe-publishwithme": "dev-master",
 		"christopherbolt/silverstripe-contentmodules": "dev-master",
-		"colymba/gridfield-bulk-editing-tools": "*"
+		"colymba/gridfield-bulk-editing-tools": "2.1.*"
     },
 	"extra": {
         "installer-name": "bolttools"
