--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
         "silverstripe/cms": "^4.0",
     	"silverstripe/framework": "^4.0",
 		"symbiote/silverstripe-gridfieldextensions": "^3",
-    	"wilr/silverstripe-googlesitemaps": "1.8.*",
+    	"wilr/silverstripe-googlesitemaps": "^2",
     	"unclecheese/betterbuttons": "2.x-dev",
     	"jonom/focuspoint": "^3",
     	"sheadawson/silverstripe-linkable": "^2",
