Update gitignores and packages

--- a/install/files/package.json
+++ b/install/files/package.json
@@ -24,7 +24,7 @@
     "eslint-config-prettier": "^4.3.0",
     "eslint-config-standard": "^14.1.1",
     "eslint-config-vue": "^2.0.2",
-    "eslint-config-wesbos": "0.0.19",
+    "eslint-config-wesbos": "^0.0.19",
     "eslint-plugin-html": "^5.0.5",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.4.1",
